Переименовал константу NUM_THEAD в MaxConnections, т.к. по смыслу это она. Плюс мелкие правки комментов

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,7 +1,7 @@
 # server.properties
 server.port=8080
 server.host=0.0.0.0
-server.num-thead=10
+server.max-connections=10
 server.max-http-request-size=8192
 server.max-http-answer-size=8192
 server.buffer-size=8192
