simplified router, simplified handle errors add BuilderSimpleAnswer

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,6 +1,6 @@
 # server.properties
 server.port=8080
-server.host=0.0.0.0
+server.host=localhost
 server.max-connections=10
 server.max-http-request-size=8192
 server.max-http-answer-size=8192
