+ shutdown hook + reRegisterKey in HttpServer.write method * add TIMEOUT_INPUT_DATA for selector.select in HttpServer.handlerThread * MAX_CONNECTIONS replaced NUM_THREAD * refactoring HttpServer.close

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,10 +1,11 @@
 # server.properties
 server.port=8080
 server.host=localhost
-server.max-connections=10
 server.max-http-request-size=8192
 server.max-http-answer-size=8192
 server.buffer-size=8192
 server.database-url=jdbc:postgresql://localhost:5432/learn
 server.userDatabase=admin
 server.passwordDatabase=1234
+server.timeout_input_data=5000
+server.num_thread=200
