+ Added a setting that allows the use of virtual or physical threads of choice in the parameter file

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -8,4 +8,5 @@ server.database-url=jdbc:postgresql://localhost:5432/learn
 server.userDatabase=admin
 server.passwordDatabase=1234
 server.timeout_input_data=5000
-server.num_thread=200
+server.num_thread=20
+server.use_virtual_thread=false
