Added HikaryCP as part of new DatabaseSource class

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -9,4 +9,5 @@ server.userDatabase=admin
 server.passwordDatabase=1234
 server.timeout_input_data=5000
 server.num_thread=20
-server.use_virtual_thread=false
+server.use_virtual_thread=true
+server.max-pool-size=20
